--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.348.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "firebase-tools": "^13.7.3",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql": "^2.18.1"
   }
 }
